media query to fix svg stroke on ie 11

--- a/css/style.scss
+++ b/css/style.scss
@@ -272,6 +272,18 @@ body {
 
         }
 
+        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+             
+            svg {
+
+                #graphic {
+                    stroke: none;
+                }
+
+            }
+             
+        }
+
     }
 
     section#content-container {
